Table hospital {
    id serial [pk]
    name varchar
    address varchar
}

Table department {
    id serial [pk]
    name varchar
    hospital_id int
}

Table doctor {
    id serial [pk]
    name varchar
    department_id int
}

Ref: department.hospital_id > hospital.id
Ref: doctor.department_id > department.id
